test/Fail/Issue3566-2.err
Issue3566-2.agda:12.8-9: error: [UnequalTerms]
(r : R) → A !=< A
when checking that the expression b has type A
